--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-	"name": "saycheese",
-	"main": "server.js",
-	"version": "0.0.1",
-	"private": true,
-	"dependencies": {
-		"express": "~4.0.0",
-		"mongoose": "~3.6.13",
-		"mongodb": "*",
-		"body-parser": "~1.4.3",
-        "formidable":"1.0.15"
-	}
+  "name": "saycheese",
+  "main": "server.js",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "body-parser": "~1.4.3",
+    "express": "~4.0.0",
+    "formidable": "1.0.15",
+    "fs-extra": "^0.11.1",
+    "mongodb": "*",
+    "mongoose": "~3.6.13"
+  }
 }
